# operadic_consistency

./: README.md  consistency_check.ipynb  pyproject.toml  run_eval.py  run_eval_3step.py
.ipynb_checkpoints/: consistency_check-checkpoint.ipynb
docs/: api_usage.md  getting_started.md  index.md
examples/: minimal_consistency.py
operadic_consistency/core/: consistency.py  evaluate.py  interfaces.py  serialization.py  toq_types.py
operadic_consistency/model_interface/: __init__.py  break_loader.py  break_loader_3step.py  hotpot_collapser.py  hotpot_collapser_3step.py  llm_answerer.py
tests/: test_break_loader.py  test_consistency.py  test_decomposer_entrypoint.py  test_evaluate.py  test_interfaces.py  test_metrics.py  test_serialization.py  test_tiny_examples.py  test_toq_types.py  test_transforms.py
